--- a/samples/Dockerfile
+++ b/samples/Dockerfile
@@ -1,4 +1,4 @@
 FROM docker
-RUN wget https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.24.2/crictl-v1.24.2-linux-amd64.tar.gz --no-check-certificatencri
+RUN wget https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.24.2/crictl-v1.24.2-linux-amd64.tar.gz --no-check-certificate
 RUN tar -zxvf crictl-v1.24.2-linux-amd64.tar.gz
 RUN mv crictl /usr/local/bin/
